@@ -1,4 +1,4 @@
-FROM openjdk:8-jdk-slim
+FROM openjdk:11-jdk-slim
 ENV PORT 8080
 ENV CLASSPATH /opt/lib
 
@@ -10,6 +10,6 @@ COPY pom.xml target/lib* /opt/lib/
 # NOTE we assume there's only 1 jar in the target dir
 # but at least this means we don't have to guess the name
 # we could do with a better way to know the name - or to always create an app.jar or something
-COPY target/*.jar /opt/app.jar
+COPY target/*-runner.jar /opt/app.jar
 WORKDIR /opt
-CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
